--- a/index.html
+++ b/index.html
@@ -111,11 +111,20 @@
 
       const addCustomFromFields = () => {
         if (!customName || !customPriceKRW) return;
+        let price = customPriceKRW;
+        try {
+          if(customPriceKRW.includes('+') || customPriceKRW.includes('-') || 
+             customPriceKRW.includes('*') || customPriceKRW.includes('/')) {
+            price = String(Math.round(new Function('return ' + customPriceKRW)()));
+          }
+        } catch(err) {
+          console.error('Price calculation error:', err);
+        }
         setItems([...items, {
           catalogId: null,
           name: customName,
           qty: 1,
-          unitKRW: Number(customPriceKRW),
+          unitKRW: Number(price),
           note: ''
         }]);
         setCustomName('');
@@ -248,11 +257,34 @@
                     />
                     <input
                       className="col-span-2 border rounded-lg p-1.5 text-xs text-right"
-                      placeholder="단가 (KRW)"
-                      inputMode="number"
-                      step="1000"
+                      placeholder="단가 (KRW) 수식가능"
                       value={customPriceKRW}
-                      onChange={e=>setCustomPriceKRW(e.target.value)}
+                      onChange={e=>{
+                        const val = e.target.value;
+                        try {
+                          // 수식이 있는지 확인
+                          if(val.includes('+') || val.includes('-') || val.includes('*') || val.includes('/')) {
+                            // eval 대신 Function을 사용하여 더 안전하게 계산
+                            const calculated = new Function('return ' + val)();
+                            setCustomPriceKRW(val);
+                          } else {
+                            setCustomPriceKRW(val);
+                          }
+                        } catch(err) {
+                          setCustomPriceKRW(val);
+                        }
+                      }}
+                      onBlur={e=>{
+                        try {
+                          const val = e.target.value;
+                          if(val.includes('+') || val.includes('-') || val.includes('*') || val.includes('/')) {
+                            const calculated = new Function('return ' + val)();
+                            setCustomPriceKRW(String(Math.round(calculated)));
+                          }
+                        } catch(err) {
+                          // 수식이 잘못된 경우 그대로 유지
+                        }
+                      }}
                       onKeyDown={e=>{ if(e.key==='Enter') addCustomFromFields(); }}
                     />
                     <button
