--- a/index.html
+++ b/index.html
@@ -367,7 +367,8 @@
                         <td className="px-3 pt-2 text-right text-gray-900">Final (editable)</td>
                         <td className="px-3 pt-2 text-right text-2xl text-gray-700 font-bold w-28">
                           <input
-                            className="w-full text-right text-2xl text-gray-700 font-bold bg-transparent border-0"
+                            type="text"
+                            className="w-full text-right text-2xl text-gray-700 font-bold bg-white border rounded px-2 py-0.5 focus:outline-none focus:ring-2 focus:ring-indigo-300"
                             value={editTotalKRW}
                             onChange={e => setEditTotalKRW(e.target.value)}
                             onKeyDown={e => { if (e.key === 'Enter') e.target.blur(); }}
