--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
     const CATALOG = [
       { id: '수면마취', name: 'Anesthesia(Sedation)', baseKRW: 110000 },
       { id: '전신마취', name: 'General Anesthesia', baseKRW: 1100000 },
-      { id: '눈밑지방이식', name: 'Nano fat grafting (under-eye)', baseKRW: 1650000 },
-      { id: '눈밑지', name: 'Infraorbital fat repositioning', baseKRW: 2420000 },
+      { id: '눈밑지방이식', name: 'Nano fat grafting (under-eye)', baseKRW: 1210000 },
+      { id: '눈밑지', name: 'Infraorbital fat repositioning', baseKRW: 2200000 },
       { id: '하안검', name: 'Lower Blepharoplasty', baseKRW: 2640000 },
       { id: '듀얼하안검', name: 'Dual Lower Blepharoplasty', baseKRW: 2750000 },
       { id: '하안검재수술', name: 'Revision Lower Blepharoplasty', baseKRW: 3300000 },
@@ -254,7 +254,7 @@
                     </div>
                   ))}
                 </div>
-                <p className="text-xs text-gray-500 mt-2">팁: 최종 견적 전에 환율을 업데이트하세요. (상단에 Auto (KRW base) 클릭)</p>
+                <p className="text-xs text-gray-500 mt-2">*최종 견적 전에 환율을 업데이트하세요. (상단에 Auto (KRW base) 클릭)</p>
               </section>
 
               <section className="bg-white rounded-2xl shadow-soft p-5">
@@ -400,16 +400,16 @@
                       )}
                       <tr>
                         <td className="px-3 pt-2 text-right text-gray-900">Subtotal</td>
-                        <td className="px-3 pt-2 text-right text-2xl text-gray-700 font-bold">{formatMoney(subtotalKRW,'KRW')}</td>
-                        <td className="px-3 pt-2 text-right text-2xl text-green-600 font-bold">{formatMoney(subtotal,currency)}</td>
+                        <td className="px-3 pt-2 text-right text-l text-gray-700 font-bold">{formatMoney(subtotalKRW,'KRW')}</td>
+                        <td className="px-3 pt-2 text-right text-l text-green-600 font-bold">{formatMoney(subtotal,currency)}</td>
                         <td></td>
                       </tr>
                       <tr>
                         <td className="px-3 pt-2 text-right text-gray-900">Final (editable)</td>
-                        <td className="px-3 pt-2 text-right text-2xl text-gray-700 font-bold">
+                        <td className="px-3 pt-2 text-right text-l text-gray-700 font-bold">
                           <input
                             type="text"
-                            className="w-full text-right text-2xl text-gray-700 font-bold bg-white border rounded px-2 py-0.5 focus:outline-none focus:ring-2 focus:ring-indigo-300"
+                            className="w-full text-right text-l text-gray-700 font-bold bg-white border rounded px-2 py-0.5 focus:outline-none focus:ring-2 focus:ring-indigo-300"
                             value={editTotalKRW}
                             onChange={e => setEditTotalKRW(e.target.value)}
                             onKeyDown={e => { if (e.key === 'Enter') e.target.blur(); }}
