font size change

--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@
                             }}
                           />
                         </td>
-                        <td className="px-3 pt-2 text-right text-2xl text-green-600 font-bold">{formatMoney(total,currency)}</td>
+                        <td className="px-3 pt-2 text-right text-l text-green-600 font-bold">{formatMoney(total,currency)}</td>
                         <td></td>
                       </tr>
                     </tfoot>
