--- a/index.html
+++ b/index.html
@@ -42,41 +42,42 @@
       { id: '하안검', name: 'Lower Blepharoplasty', baseKRW: 2640000 },
       { id: '듀얼하안검', name: 'Dual Lower Blepharoplasty', baseKRW: 2750000 },
       { id: '하안검재수술', name: 'Revision Lower Blepharoplasty', baseKRW: 3300000 },
-      { id: '상안검', name: 'Upper Blepharoplasty', baseKRW: 2640000 },
-      { id: '상안검재수술', name: 'Revision Upper Blepharoplasty', baseKRW: 3300000 },
-      { id: '눈썹하거상술', name: 'Subbrow Lift', baseKRW: 2420000 },
+      { id: '상안검', name: 'Upper Blepharoplasty', baseKRW: 1980000 },
+      { id: '상안검재수술', name: 'Revision Upper Blepharoplasty', baseKRW: 2420000 },
+      { id: '눈썹하거상술', name: 'Subbrow Lift', baseKRW: 1980000 },
       
-      { id: '비절개_쌍꺼풀', name: 'Non-incisional double eyelid', baseKRW: 1650000 },
-      { id: '절개쌍커풀', name: 'Incisional double eyelid', baseKRW: 2420000 },
-      { id: '비절개눈매교정', name: 'Non-incisional Canthoplasty', baseKRW: 1980000 },
+      { id: '비절개_쌍꺼풀', name: 'Non-incisional double eyelid', baseKRW: 1100000 },
+      { id: '절개쌍커풀', name: 'Incisional double eyelid', baseKRW: 1650000 },
+      { id: '비절개눈매교정', name: 'Non-incisional Canthoplasty', baseKRW: 1320000 },
       { id: '추가코', name: 'Extra nose augmentation', baseKRW: 770000 },
       { id: '기증늑', name: 'Donated rib cartilage', baseKRW: 1540000 },
       { id: '자가늑', name: 'Autologous rib cartilage', baseKRW: 3300000 },
       { id: '코첫수술', name: 'Rhinoplasty', baseKRW: 3300000 },
-      { id: '코재수술', name: 'Revision Rhinoplasty', baseKRW: 5500000 },
-      { id: '풀지방이식', name: 'Full facial fat grafting', baseKRW: 2200000 },
-      { id: '미세지방이식', name: 'Micro fat grafting', baseKRW: 1320000 },
-      { id: '이마거상', name: 'Forehead lift', baseKRW: 4950000 },
+      { id: '코재수술', name: 'Revision Rhinoplasty', baseKRW: 4400000 },
+      { id: '풀지방이식', name: 'Full facial fat grafting', baseKRW: 1650000 },
+      { id: '미세지방이식', name: 'Micro fat grafting', baseKRW: 880000 },
+      { id: '이마거상', name: 'Forehead lift', baseKRW: 3300000 },
+      { id: '이마거상재수술', name: 'Revision Forehead lift', baseKRW: 5500000 },
       { id: '안면거상', name: 'Facelift', baseKRW: 12100000 },
-      { id: '이마축소', name: 'Forehead reduction', baseKRW: 3300000 },
-      { id: '줄기세포30', name: 'Stem cell (30cc/skin)', baseKRW: 1320000 },
-      { id: '줄기세포60', name: 'Stem cell (60cc/skin)', baseKRW: 2200000 },
-      { id: '줄기세포120', name: 'Stem cell Premium (120cc)', baseKRW: 5500000 },
-      { id: '줄기세포30', name: 'Stem cell (30cc/skin)', baseKRW: 13200000 },
+      { id: '이마축소', name: 'Forehead reduction', baseKRW: 2750000 },
+      { id: '줄기세포30', name: 'Stem cell (30cc/skin)', baseKRW: 990000 },
+      { id: '줄기세포60', name: 'Stem cell (60cc/skin)', baseKRW: 1650000 },
+      { id: '줄기세포120', name: 'Stem cell Premium (120cc)', baseKRW: 3630000 },
+      { id: '줄기세포240', name: 'Stem cell VIP(240cc)', baseKRW: 7260000 },
 
       { id: '아큐얼굴지흡', name: 'Accusclupt-double chin', baseKRW: 1320000 },
       { id: '아큐얼굴지흡2', name: 'Accusclupt-double chin + contour', baseKRW: 1650000 },
       { id: '아큐민트8', name: 'Accusclupt + Mintvery', baseKRW: 2970000 },
       { id: '아랫배지흡', name: 'Lower abdomen liposuction', baseKRW: 4400000 },
       { id: '지흡윗배추가', name: 'Upper abdomen liposuction (add-on)', baseKRW: 1650000 },
-      { id: '리쥬란힐러2', name: 'Rejuran Healer (2cc)', baseKRW: 484000 },
-      { id: '리쥬란힐러4', name: 'Rejuran Healer (4cc)', baseKRW: 968000 },
-      { id: '리쥬란아이1', name: 'Rejuran Eye (1cc)', baseKRW: 330000 },
-      { id: '쥬베룩스킨4', name: 'Juvelook Skin (4cc)', baseKRW: 539000 },
-      { id: '쥬베룩스킨8', name: 'Juvelook Skin (8cc/including neck)', baseKRW: 1078000 },
-      { id: '쥬베룩볼륨4', name: 'Juvelook Volume (4cc)', baseKRW: 649000 },
-      { id: '쥬베룩볼륨8', name: 'Juvelook Volume (8cc/including neck)', baseKRW: 1210000 },
-      { id: '엘라비에리투오', name: 'Elravie Re2O (1syringe)', baseKRW: 770000 },
+      { id: '리쥬란힐러2', name: 'Rejuran Healer (2cc)', baseKRW: 220000 },
+      { id: '리쥬란힐러4', name: 'Rejuran Healer (4cc)', baseKRW: 407000 },
+      { id: '리쥬란아이1', name: 'Rejuran Eye (1cc)', baseKRW: 132000 },
+      { id: '쥬베룩스킨4', name: 'Juvelook Skin (4cc)', baseKRW: 220000 },
+      { id: '쥬베룩스킨8', name: 'Juvelook Skin (8cc/including neck)', baseKRW: 407000 },
+      { id: '쥬베룩볼륨4', name: 'Juvelook Volume (4cc)', baseKRW: 330000 },
+      { id: '쥬베룩볼륨8', name: 'Juvelook Volume (8cc/including neck)', baseKRW: 605000 },
+      { id: '엘라비에리투오', name: 'Elravie Re2O (1syringe)', baseKRW: 660000 },
     ];
 
     // 1 KRW → target currency (approx defaults; update via Auto)
